EDU-453 refactor: 기본 로드맵 반환 형식 통일